--- a/HTML/Venue.html
+++ b/HTML/Venue.html
@@ -14,8 +14,7 @@
 			<div class="row h-left">
 				<div class="col lg-9">
 					<div class="bullet-group large z-1">
-						<h1 class="text-large">Venue, Travel, & Accommodations</h1>
-						<p class="h3">This year MicroStrategy World will be hosted at The Phoenix Convention Center.</p>
+						<h1 class="text-large">Venue, Lodging, & Travel</h1>
 					</div>
 				</div>
 			</div>
@@ -40,25 +39,31 @@
 				</div>
 				
 				<div class="col md-6">
-					<p class="h3">Phoenix Convention Center</p>
+					<h2>Venue</h2>
+					<p class="h3">MicroStrategy World 2019 will be hosted at the beautiful Phoenix Convention Center in the heart of Arizona.</p>
 					<p>The Phoenix Convention Center is located in the heart of downtown Phoenix and just 4 miles from Sky Harbor International Airport. The center is within walking distance of major convention hotels, shopping, entertainment, sports, theater venues and has its own dedicated stop on the Metro Light Rail line.</p>
-
-					<h3 class="text-uppercase text-normal text-small">Air Travel</h3>
+					<!-- <h3 class="text-uppercase text-normal text-small">Air Travel</h3>
 					<p>The Phoenix Convention Center is four miles from <a class="text-white" href="https://www.skyharbor.com/">Sky Harbor International Airport</a>. Guests flying into Phoenix have multiple transportation options, including the Metro Light Rail, which has dedicated stops at the Convention Center.</p>
 					<p><strong>Sky Harbor International Airport</strong></p>
-					<p>2485 E Buckeye Rd,<br> Phoenix, AZ 85034</p>
+					<p>2485 E Buckeye Rd,<br> Phoenix, AZ 85034</p> -->
 				</div>
 			</div>
 		</section>
 		<section id="accommodations-photos" class="section-stacked-bars background-orange no-padding-top">
-				<div class="row photo-row large expand collapse">
-					<div class="col md-6 expand collapse">
-						<div class="photo venue-second"></div>
-					</div>
-					<div class="col md-6 expand collapse">
-						<div class="photo venue-third"></div>
-					</div>
+			<div class="row no-padding h-center">
+				<div class="col md-7 text-center">
+					<h2>Lodging</h2>
+					<p class="h3">MicroStrategy has secured room blocks at the Sheraton and Renaissance in downtown Phoenix. Book your room now to secure best pricing and availability!</p>
 				</div>
+			</div>
+			<div class="row photo-row large expand collapse">
+				<div class="col md-6 expand collapse">
+					<div class="photo venue-second"></div>
+				</div>
+				<div class="col md-6 expand collapse">
+					<div class="photo venue-third"></div>
+				</div>
+			</div>
 			<div class="row h-left">
 				<div class="col md-6">
 					<div class="bullet-group">
@@ -106,8 +111,19 @@
 
 		<section class="photo-mosaic no-padding background-navy">
 			<div class="row h-center">
-				<div class="col">
-					<h3 class="text-center text-normal">Places to check out while at World 2019:</h3>
+				<div class="col md-7 text-center">
+					<h2>Travel During Your Stay in Phoenix</h2>
+				</div>
+			</div>
+			<div class="row h-center">
+				<div class="col md-5">
+					<p class="h4">Make the most of your time in Arizona and enhance your stay with one of the great day trips offered by Detours American West</a>.</p>
+					<p><a href="http://www.detoursamericanwest.com/" class="cta-button small green ">Book Your Detour</a></p>
+					<p class="small text-bold">If you book your trip with Detours, make sure to state that you are a MicroStrategy World attendee to receive best prices.</p>
+				</div>
+				<div class="col md-5">
+					<p class="h4">To guarantee comfortable travel throughout Phoenix book your ride at discounted MicroStrategy World fares from SuperShuttle Phoenix.
+					<br><a href="https://group.supershuttle.com/group-page/microstrategy-world-2019/" class="cta-button small green">Book Your Ride</a></p>
 				</div>
 			</div>
 			<div class="row expand collapse photo-row short">
@@ -125,6 +141,7 @@
 				<div class="col padding-20 md-6">
 						<h3>Grand Canyon</h3>
 						<p>Take in unforgettable views of classic southwestern landscapes. Explore the Grand Canyon South Rim in this incredible tour from Phoenix that covers the deepest and widest parts of the Grand Canyon.</p> 
+						<p><a href="https://detoursamericanwest.com/grand-canyon-south-rim-tours-from-phoenix/" class="cta-button green small">Book this tour</a></p>
 				</div>
 				<div class="col md-3 release">
 						<div class="col background-pattern pattern-squiggles-navy height-small">&nbsp;</div>
@@ -145,7 +162,8 @@
 				</div>
 				<div class="col padding-20 md-6">
 						<h3>Sedona</h3>
-					<p>Tour the magical red rocks of Sedona and visit Native American ruins during this Sedona Red Rocks Tour from Phoenix.</p> 
+					<p>Tour the magical red rocks of Sedona and visit Native American ruins during this Sedona Red Rocks Tour from Phoenix.</p>
+					<p><a href="https://detoursamericanwest.com/sedona-red-rocks-tours-from-phoenix/" class="cta-button orange small">Book this tour</a></p>
 				</div>
 			</div>
 			<div class="row expand collapse photo-row short">
@@ -166,6 +184,7 @@
 				<div class="col padding-20 md-6">
 					<h3>Antelope Canyon</h3>
 					<p>Tour Antelope Canyon in the only day-tour available from the Phoenix area! Experience one of the most picturesque slot canyons before taking in the breathtaking views of Horseshoe Bend.</p>
+					<p><a href="https://detoursamericanwest.com/antelope-canyon-horseshoe-bend-tours-from-phoenix/" class="cta-button red small">Book this tour</a></p>
 				</div>
 				<div class="col md-6">
 					<div class="photo antelope-canyon">&nbsp;</div>
@@ -203,6 +222,7 @@
 				<div class="col padding-20 md-6">
 					<h3>Tombstone</h3>
 					<p>On this guided day tour of Tombstone, Arizona, explore the “Town Too Tough To Die” and its classic western history like the OK Corral.</p>
+					<p><a href="https://detoursamericanwest.com/tombstone-tours-from-phoenix/" class="cta-button orange small">Book this tour</a></p>
 				</div>
 				<div class="col md-3 release">
 					<div class="col release photo tombstone2">&nbsp;</div>
@@ -224,6 +244,7 @@
 				<div class="col padding-20 md-6">
 					<h3>The City</h3>
 					<p>Explore one of the most diverse cities in the nation. See downtown Phoenix, the time-honored Arizona capitol building, Old Town Scottsdale and the historic Biltmore architecture as we tour the Valley of the Sun.</p>
+					<p><a href="https://detoursamericanwest.com/phoenix-scottsdale-city-half-day-tours/" class="cta-button navy small">Book this tour</a></p>
 				</div>
 			</div>
 			<div class="row expand collapse photo-row short">
