--- a/HTML/concierge.html
+++ b/HTML/concierge.html
@@ -79,21 +79,30 @@
                     </ul>
                 </div>
                 <div class="col md-7 collapse margin-left-20">
-                    <div class="row expand background-light-gray no-padding photo-row margin-bottom-20">
-                        <div class="col md-6 collapse">
+                    <div class="row expand background-light-gray no-padding margin-bottom-20">
+                        <div class="col md-6 collapse photo-row">
+                            <div class="photo one-on-one"></div>
+                        </div>
+                        <div class="col md-6">
+                                <h3 class="text-normal h4">1:1 MicroStrategy 2019 Consultation, Tech Talks & Solution Talks</h3>
+                                <p>Now that you’re registered for World, it’s time to start thinking about how to maximize your time in Phoenix. Book your 1:1 MicroStrategy v2019 upgrade consultation, Tech Talk or Solution Talk and meet with a MicroStrategy consultant who will provide feedback to help you accomplish your digital transformation goals faster.</p>
+                                <a href="https://microstrategy.jifflenow.com/microstrategyworld2019/external_request/c8b915?mkt_tok=eyJpIjoiT1RWbE9XVTBOVGM1TUdZNCIsInQiOiJvQno0YUFoWklWZjZ1eVBnUFdta25tNmREMVRGWG42TGZDWHhqMWJkbFVBQ2NjVjJGNFVJVFB5R1FhZENmOEowOEZuRldpU1NkR3VGWWN1WE1hclwvcEE9PSJ9" class="cta-button red carat">Book Now</a>
+                        </div>
+                    </div>
+                    
+                    <div class="row expand background-light-gray no-padding margin-bottom-20">
+                        <div class="col md-6 collapse photo-row">
                             <div class="photo half datathon"></div>
                             <div class="photo half dossier"></div>
                         </div>
                         <div class="col md-6">
-                            <div class="card">
                                 <h3 class="text-normal h4">Datathon & Dossier Contests</h3>
                                 <p>The <a href="https://www.microstrategy.com/us/go/world-2019-datathon">Datathon</a> and <a href="https://www.microstrategy.com/us/go/world-2019-dossier-contest">Dossier Contest</a> are our two most highly anticipated events. The Dossier Contest challenges individuals to build creative, intuitive, and transformative solutions. Winners will receive an iPhone Xs or Apple Watch! The Datathon is a team-based competition that will take place over the first two days of World. Contestants will compete to use MicroStrategy and a provided data-set to create an innovative solution and showcase their finished products. And the best part? <strong>The winning team will receive $10,000!</strong></p>
-                            </div>
                         </div>
                     </div>
                     
-                    <div class="row expand background-light-gray no-padding margin-bottom-20 photo-row">
-                        <div class="col md-6 collapse">
+                    <div class="row expand background-light-gray no-padding margin-bottom-20 ">
+                        <div class="col md-6 collapse photo-row">
                             <div class="photo block-party">
                             </div>
                         </div>
