added link for pdf download

--- a/HTML/session-new.html
+++ b/HTML/session-new.html
@@ -37,6 +37,7 @@
 						</h2>
 						<p class="h4">MicroStrategy World 2019 is an immersive learning experience designed to educate and inspire every attendee. With sessions tailored to every role, industry, and skill level, World offers personalized content that matches the interests and needs of everyone—from executives, to IT developers, to analysts. Use the filters below to explore the agenda and find the right sessions for you!</p>
 						<p class="h4 text-normal">New speakers and sessions are confirmed daily. Check back often for&nbsp;updates.</p>
+						<a href="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/files/320fb46c07b4499db9d67df8c86b2476.pdf" class="cta-button orange carat">Download full session guide</a>
 					</div>
 				</div>
 			</div>
