--- a/HTML/Special events.html
+++ b/HTML/Special events.html
@@ -32,13 +32,17 @@
 		</div>
 	</section>
 
-	<section class="background-gradient-orange section-ribbon padding-top-20 no-padding-bottom">
-		<div class="row h-center">
-			<div class="col text-center lg-7">
-				<h3 class="text-normal h4">Sign-up for Education courses when registering for MicroStrategy World 2019. In the event you are already registered for World and would like to sign up for Education courses now, please <a href="https://www.cvent.com/Events/Register/RegNumConfirmation.aspx?e=2c0e1774-16a0-487b-95c8-2069ccaa35ce" class="text-white">modify your registration</a>. If you need assistance please contact <a href="mailto:microstrategyworld@microstrategy.com" class="text-white">MicroStrategy World</a>.</h3>
+	<section class="no-padding background-orange">
+		<div class="row h-center z-1">
+			<div class="col text-center lg-8">
+				<p class="text-normal h5">Sign-up for Education courses when registering for MicroStrategy World 2019. In the event you are already registered for World and would like to sign up for Education courses now, please <a href="https://www.cvent.com/Events/Register/RegNumConfirmation.aspx?e=2c0e1774-16a0-487b-95c8-2069ccaa35ce" class="cta-button red carat small">modify your registration</a>
+					<br>If you need assistance please contact <a href="mailto:microstrategyworld@microstrategy.com" class="text-red">MicroStrategy World</a></p>
 			</div>
 		</div>
-		<div class="row h-left">
+	</section>
+
+	<section class="background-orange section-ribbon padding-top-20 no-padding-bottom">
+		<div class="row h-left z-1">
 			<div id="education" class="col md-6">
 					<div class="header-box education bullet-group">
 						<h3 class="h2 text-medium text-normal">Building a More Intelligent Enterprise: Best Practices for the Intelligence Director</h3>
@@ -50,13 +54,13 @@
 							<div class="col lg-6">
 								<div class="triangle-group red margin-top-10">
 									<p><strong>Monday, February 4</strong><br>
-									11:15am - 3:45pm</p>
+									1:00pm - 4:00pm</p>
 								</div>
 							</div>
 							<div class="col lg-6">
 								<div class="triangle-group red margin-top-10">
 									<p><strong>Thursday, February 7</strong><br>
-									7:30am - 12:00pm <br> 12:30pm - 5:00pm</p>
+									9:00am - 12:00pm <br> 1:00pm - 4:00pm</p>
 								</div>
 							</div>
 						</div>
@@ -84,13 +88,13 @@
 							<div class="col lg-6">
 								<div class="triangle-group red margin-top-10">
 									<p><strong>Monday, February 4</strong><br>
-									11:15am - 3:45pm</p>
+									1:00pm - 4:00pm</p>
 								</div>
 							</div>
 							<div class="col lg-6">
 								<div class="triangle-group red margin-top-10">
 									<p><strong>Thursday, February 7</strong><br>
-										7:30am - 12:00pm <br> 12:30pm - 5:00pm</p>
+										9:00am - 12:00pm <br> 1:00pm - 4:00pm</p>
 								</div>
 							</div>
 						</div>
@@ -119,7 +123,8 @@
 
 							<!-- <div class="text-label navy outline">Date and time</div> -->
 							<div class="triangle-group orange margin-top-10">
-								<p><strong>Monday, January 4</strong></p>
+								<p><strong>Monday, January 4</strong><br>
+								2:00pm - 5:00pm</p>
 							</div>
 							<a href="http://events.microstrategy.com/events/microstrategy-world-2019/custom-36-2c0e177416a0487b95c82069ccaa35ce.aspx?p=36" class="cta-button small orange carat margin-top-10">Learn More</a>
 						</div>
@@ -193,16 +198,22 @@
 							<div class="text-label navy margin-top-10">Contest</div>
 							<p>MicroStrategy Datathon 2019 is a friendly, team-based competition hosted during the first two days of the World 2019 conference in Phoenix, AZ. Registered teams will compete head-to-head in the main exhibit hall at the center of all the action using the MicroStrategy platform and a provided data-set to create an innovative solution, with the aid of MicroStrategy Professionals and specialists. Teams will also have the opportunity to show their finished products to everyone in attendance. And the best part? The winning team wins a grand prize of <span class="currency">$</span>10,000! Other prizes will also consist of a “People’s Choice Award” and a “Lone-Wolf Prize”.</p> 
 							<div class="row">
-									<div class="col lg-6">
+									<div class="col lg-4">
 										<div class="triangle-group red margin-top-10">
 											<p><strong>Monday, February 4</strong><br>
-											9:00am - 6:00pm</p>
+											8:00am - 7:30pm</p>
 										</div>
 									</div>
-									<div class="col lg-6">
+									<div class="col lg-4">
 										<div class="triangle-group red margin-top-10">
 											<p><strong>Tuesday, February 5</strong><br>
-												9:00am - 6:00pm</p>
+												8:00am - 6:00pm</p>
+										</div>
+									</div>
+									<div class="col lg-4">
+										<div class="triangle-group red margin-top-10">
+											<p><strong>Wednesday, February 6</strong><br>
+												8:00am - 3:00pm</p>
 										</div>
 									</div>
 								</div>
