added new sponsors

--- a/HTML/sponsors.html
+++ b/HTML/sponsors.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="../CSS/main.min.css">
+</head>
+<body>
+    
 <div id="sponsors-page">
     <div class="pattern-between row expand collapse">
         <div class="col release background-pattern pattern-tartan pattern-small height-small"></div>
@@ -28,6 +39,32 @@
         <div class="row h-left">
             <div class="col sm-12">
                 <div class="bullet-group blue">
+                    <h5 class="text-uppercase text-bold">Platinum Sponsors</h5>
+                    <div class="pattern-between row h-left expand collapse margin-top-10">
+                        <div class="col sm-2 md-1 background-pattern pattern-tartan pattern-small height-tiny"></div>
+                        <div class="col sm-2 md-1 background-pattern pattern-split-circles pattern-small height-tiny"></div>
+                        <div class="col sm-2 md-1 background-pattern pattern-stacked-bars pattern-small height-tiny"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row h-left">
+            <div class="col lg-3 md-4">
+                <a href="http://www.panderasystems.com/" target="_blank" class="ratio sixteen-nine">
+                    <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/50c9350dc66441768b3f62a35fd4516e.png" alt="Pandera logo">
+                </a>
+            </div>
+            <div class="col md-7 lg-6">
+                <h6 class="text-uppercase text-bold">Pandera Systems</h6>
+                <p>Pandera Systems helps organizations make better decisions by pushing technology limitations to leverage critical data confidently, intuitively, and instantaneously. Pandera understands that success isn’t by chance, so they work with organizations to clearly define goals and objectives then design customized solution concepts, implementation, and support plans for each endeavour. Pandera aims to optimize processes, infrastructure, and resources with a disruptive mindset that delivers.</p>
+                <p>Pandera believes that a centralized analytics platform that achieves enterprise-wide alignment of people, data, and technology creates an objective decision-making environment that in turn optimizes daily operations and human-capital performance organization wide.</p>
+                <p>Pandera business and technology advisers are always on the cutting edge of emerging technologies/trends and these experts combine that knowledge with a deep understanding that each industry has unique challenges and opportunities. Through a holistic, strategic, yet agile strategy we produce the most effective solutions possible and make people better.</p>
+            </div>
+            <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
+        </div>
+        <div class="row h-left">
+            <div class="col sm-12">
+                <div class="bullet-group blue">
                     <h5 class="text-uppercase text-bold">Gold Sponsors</h5>
                     <div class="pattern-between row h-left expand collapse margin-top-10">
                         <div class="col sm-2 md-1 background-pattern pattern-tartan pattern-small height-tiny"></div>
@@ -40,11 +77,23 @@
         <div class="row h-left">
             <div class="col lg-3 md-4">
                 <a href="https://www.aws.amazon.com/" target="_blank" class="ratio sixteen-nine">
-                    <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/8d5b8eaac6f34bf287baf365d6f02509.png" alt="Amazon Web Services (AWS) logo">
+                    <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/a886990381f84ced876d5a4b178a4909.png" alt="Amazon Web Services (AWS) logo">
                 </a>
             </div>
             <div class="col md-7 lg-6">
                 <h6 class="text-uppercase text-bold">Amazon Web Services (AWS)</h6>
+                <p>Amazon Web Services has been the world’s most comprehensive and broadly adopted cloud platform. AWS offers over 125 fully featured services trusted by millions of active customers around the world, including the fastest growing startups, largest enterprises, and government, to power their infrastructure, make them more agile, and lower costs.</p>
+            </div>
+            <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
+        </div>
+        <div class="row h-left">
+            <div class="col lg-3 md-4">
+                <a href="https://www2.deloitte.com/" target="_blank" class="ratio sixteen-nine">
+                    <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/3dd2d171adcf4ffebd3448348eeaf7e8.png" alt="Deloitte logo">
+                </a>
+            </div>
+            <div class="col md-7 lg-6">
+                <h6 class="text-uppercase text-bold">Deloitte</h6>
                 <p><em>Company description coming soon!</em></p>
             </div>
             <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
@@ -172,6 +221,7 @@
             </div>
             <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
         </div>
+        
         <div class="row h-left">
             <div class="col lg-3 md-4">
                 <a href="https://www.teradata.com/" target="_blank" class="ratio sixteen-nine">
@@ -310,6 +360,18 @@
         </div>
         <div class="row h-left">
             <div class="col lg-3 md-4">
+                <a href="https://www.solution-bi.com" target="_blank" class="ratio sixteen-nine">
+                    <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/2c18fde060c746688f0dc8118e9aa8a8.png" alt="Solutions B.I. logo" />
+                </a>
+            </div>
+            <div class="col md-7 lg-6">
+                <h6 class="text-uppercase text-bold">Solutions B.I</h6>
+                <p><em>Company description coming soon!</em></p>
+            </div>
+            <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
+        </div>
+        <div class="row h-left">
+            <div class="col lg-3 md-4">
                 <a href="https://www.visualcrossing.com/" target="_blank" class="sixteen-nine">
                     <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/2a902a05db6d4a7f9c6fd4c867ae9fd0.png" alt="Visual Crossing logo">
                 </a>
@@ -373,3 +435,5 @@
     .register-btn-bottom { display: none; }
     div.bottom {padding:0;}
 </style>
+</body>
+</html>
