added applied filter section in order to add dynamic appearance

--- a/HTML/session-new.html
+++ b/HTML/session-new.html
@@ -116,6 +116,16 @@
 					<div class="row h-left">
 						<div id="view-options" class="col">
 							<button id="filter-btn" class="cta-button">Filter</button>
+							<div id="applied-filters">
+								<h3 class='text-small text-normal h6'>Filters Applied:</h3>
+								<ul>
+									<li class="text-label">Filter Item 1</li>
+									<li class="text-label">Filter Item 2</li>
+									<li class="text-label">Filter Item 3</li>
+									<li class="text-label">Filter Item 4</li>
+									<li class="text-label">Filter Item 5</li>
+								</ul>
+							</div>
 						</div>
 					</div>
 
