--- a/HTML/concierge.html
+++ b/HTML/concierge.html
@@ -43,7 +43,7 @@
                 <div class="col md-3 background-light-gray">
                     <h3 class="text-normal h4">Don't forget to: </h3>
                     <ul class="text-bold">
-                        
+                        <h5 class="text-red"><em>Book your hotel before January 15 to get the MicroStrategy rate!</em></h5>
                         <li>Make your hotel reservation at the Sheraton Grand Phoenix<br> 
                             <p class="text-small">Don't forget to mention you're attending MicroStrategy World 2019</p>
                             <a class="cta-button blue small" href="https://book.passkey.com/go/MicroStrategyWorld2019" target="_blank">Book Your Room</a>
