updated class names and content

--- a/HTML/Venue.html
+++ b/HTML/Venue.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Venue</title>
-	<link rel="stylesheet" href="../CSS/main.min.css">
+	<link rel="stylesheet" href="../CSS/min/main.css">
 </head>
 <body>
 	<div id='venue-page'>
@@ -33,11 +33,11 @@
 
 		<section id="venue" class="section-stacked-bars">
 			<div class="row photo-row large">
-				
+
 				<div class="col md-6 expand collapse">
 					<div class="photo venue-main"></div>
 				</div>
-				
+
 				<div class="col md-6">
 					<h2>Venue</h2>
 					<p class="h3">MicroStrategy World 2019 will be hosted at the beautiful Phoenix Convention Center in the heart of Arizona.</p>
@@ -58,13 +58,33 @@
 			</div>
 			<div class="row photo-row large expand collapse">
 				<div class="col md-6 expand collapse">
-					<div class="photo venue-second"></div>
+					<div class="photo venue-hampton"></div>
 				</div>
 				<div class="col md-6 expand collapse">
-					<div class="photo venue-third"></div>
+					<div class="photo venue-sheraton"></div>
 				</div>
 			</div>
 			<div class="row h-left">
+				<div class="col md-6">
+					<div class="bullet-group">
+						<h3 class="text-uppercase text-normal marginup5">Hampton Inn & Suites Phoenix Downtown</h3>
+						<p>77 East Polk Street <br> Phoenix, Arizona, 85004</p>
+						<p>Phone: <a href="tel:602-710-1240" class="text-white">602-710-1240</a></p>
+						<p>Website: <a href="https://na01.safelinks.protection.outlook.com/?url=https%3A%2F%2Fsecure3.hilton.com%2Fen_US%2Fhp%2Freservation%2Fbook.htm%3FinputModule%3DHOTEL%26ctyhocn%3DPHXCTHX%26spec_plan%3DCHHMSW%26arrival%3D20190131%26departure%3D20190208%26cid%3DOM%2CWW%2CHILTONLINK%2CEN%2CDirectLink%26fromId%3DHILTONLINKDIRECT&data=02%7C01%7CJeffrey.Demenna%40hilton.com%7Cab15d355ee224d11c19d08d67b2d7918%7C660292d2cfd54a3db7a7e8f7ee458a0a%7C0%7C0%7C636831832569319216&sdata=O%2BZ1OQqw9HpkEQB29slZnjHDfmy%2Fsw6CoouC%2F7f5px8%3D&reserved=0" class="text-white" target="_blank">Hampton Inn & Suites</a></p>
+
+						<p>Stay at Hampton Inn & Suites Phoenix Downtown and be just steps from it all. Walk to events at Phoenix Convention Center, restaurants at CityScape, Suns games at Talking Stick Resort Arena, and Diamondbacks games at Chase Field – all within a mile of the hotel.</p>
+						<div class="line tiny blue thick"></div>
+						<h3 class="text-uppercase text-normal text-small">Hotel details & Amenities</h3>
+						<ul class="triangle-list orange">
+							<li>Rooftop pool and hot tub with sun deck</li>
+							<li>24-hour StayFit™ gym</li>
+							<li>Pool/fitness center</li>
+							<li>Laundry/Valet Service</li>
+						</ul>
+						<a class="cta-button navy carat large" href="https://na01.safelinks.protection.outlook.com/?url=https%3A%2F%2Fsecure3.hilton.com%2Fen_US%2Fhp%2Freservation%2Fbook.htm%3FinputModule%3DHOTEL%26ctyhocn%3DPHXCTHX%26spec_plan%3DCHHMSW%26arrival%3D20190131%26departure%3D20190208%26cid%3DOM%2CWW%2CHILTONLINK%2CEN%2CDirectLink%26fromId%3DHILTONLINKDIRECT&data=02%7C01%7CJeffrey.Demenna%40hilton.com%7Cab15d355ee224d11c19d08d67b2d7918%7C660292d2cfd54a3db7a7e8f7ee458a0a%7C0%7C0%7C636831832569319216&sdata=O%2BZ1OQqw9HpkEQB29slZnjHDfmy%2Fsw6CoouC%2F7f5px8%3D&reserved=0" target="_blank">Book your room online</a>
+					</div>
+				</div>
+
 				<div class="col md-6">
 					<div class="bullet-group">
 						<h3 class="text-uppercase text-normal marginup5">Sheraton Grand Phoenix</h3>
@@ -83,16 +103,49 @@
 							<li>Pool/fitness center</li>
 							<li>Pet Friendly</li>
 						</ul>
-						<a class="cta-button navy carat large" href="https://www.marriott.com/event-reservations/reservation-link.mi?id=1544552427242&key=GRP&app=resvlink" target="_blank">Book your room online</a>
+						<a class="cta-button navy carat large" href="https://www.marriott.com/event-reservations/reservation-link.mi?id=1544552427242&amp;key=GRP&amp;app=resvlink" target="_blank">Book your room online</a>
 					</div>
 				</div>
+			</div>
+
+			<div class="row photo-row large expand collapse">
+				<div class="col md-6 expand collapse">
+					<div class="photo venue-hyatt"></div>
+				</div>
+				<div class="col md-6 expand collapse">
+					<div class="photo venue-renaissance"></div>
+				</div>
+			</div>
+			<div class="row h-left">
+				<div class="col md-6">
+					<div class="bullet-group">
+						<h3 class="text-uppercase text-normal marginup5">Hyatt Regency Phoenix</h3>
+						<p>122 North Second Street <br> Phoenix, Arizona, 85004</p>
+						<p>Phone: <a href="tel:602-252-1234" class="text-white">602.252.1234</a></p>
+						<p>Website: <a href="https://www.hyatt.com/en-US/hotel/arizona/hyatt-regency-phoenix/phxrp" class="text-white" target="_blank">Hyatt Regency Phoenix</a></p>
+						<p class="text-label red text-uppercase"><strong>Roooms Sold Out</strong></p>
+						<p class="text-bold text-light-gray">Currently all rooms are sold out. Please call the reservation line to check availability.</p>
+						<p>Located across the street from the Phoenix Convention Center, Hyatt Regency Phoenix places downtown Phoenix at your feet. Walk to the Arizona Center Shops and entertainment at CityScape, located two blocks from the hotel. Explore museums, culture, the arts, and the vibrant nightlife of downtown Phoenix just outside our doors.</p>
+						<div class="line tiny blue thick"></div>
+						<h3 class="text-uppercase text-normal text-small">Hotel details & Amenities</h3>
+						<ul class="triangle-list orange">
+							<li>Business Center</li>
+							<li>Meeting Rooms</li>
+							<li>24 hr Pavilion Pantry Market</li>
+							<li>Three dining outlets, including the revolving Compass Lounge and Restaurant</li>
+						</ul>
+
+					</div>
+				</div>
+
 				<div class="col md-6">
 					<div class="bullet-group">
 						<h3 class="text-uppercase text-normal marginup5">Renaissance Phoenix Downtown Hotel</h3>
 						<p>100 North 1st Street <br> Phoenix, Arizona, 85004</p>
 						<p>Phone: <a href="tel:602-333-0000" class="text-white">602.333.0000</a></p>
 						<p>Website: <a href="https://book.passkey.com/go/MicroStrategyWorld2019" class="text-white" target="_blank">Renaissance Phoenix Downtown Hotel</a></p>
-						<p><strong>Room rate $269</strong></p>
+						<p class="text-label red text-uppercase"><strong>Roooms Sold Out</strong></p>
+						<p class="text-bold text-light-gray">Currently all rooms are sold out. Please call the reservation line to check availability.</p>
 						<p>Immerse yourself into the vibrant culture of Phoenix by staying at Renaissance Phoenix Downtown Hotel. After experiencing the unique style of our newly reimagined lobby, unwind in your perfectly appointed accommodations, which seamlessly blend modern sophistication with second-home comfort. Upgrade to a hotel suite for optimal space or a Club Level room for exclusive Club Lounge access. Keep your workout routine in our modern fitness center, or relax in our heated rooftop pool. Before a day exploring downtown Phoenix or business, start your day with a coffee beverage from our on-site Starbucks® or a tempting breakfast from Marston's Cafe.</p>
 						<p> For a taste of the Southwest, visit Dust Cutter, our hotel's signature restaurant. Hold your next meeting or special event with us. Our hotel boasts over 51,000 square feet of flexible event space. Along with our proximity to the Phoenix Convention Center, attendees will appreciate our hotel's ideal downtown location near Chase Field, Talking Stick Resort Arena and more.</p>
 						<div class="line tiny blue thick"></div>
@@ -103,7 +156,6 @@
 							<li>Pool/fitness center</li>
 							<li>Business Center</li>
 						</ul>
-						<a class="cta-button navy carat large" href="https://book.passkey.com/go/MicroStrategyWorld2019" target="_blank">Book your room online</a>
 					</div>
 				</div>
 			</div>
@@ -140,7 +192,7 @@
 			<div class="row h-left photo-row short expand collapse">
 				<div class="col padding-20 md-6">
 						<h3>Grand Canyon</h3>
-						<p>Take in unforgettable views of classic southwestern landscapes. Explore the Grand Canyon South Rim in this incredible tour from Phoenix that covers the deepest and widest parts of the Grand Canyon.</p> 
+						<p>Take in unforgettable views of classic southwestern landscapes. Explore the Grand Canyon South Rim in this incredible tour from Phoenix that covers the deepest and widest parts of the Grand Canyon.</p>
 						<p><a href="https://detoursamericanwest.com/grand-canyon-south-rim-tours-from-phoenix/" class="cta-button green small">Book this tour</a></p>
 				</div>
 				<div class="col md-3 release">
@@ -178,7 +230,7 @@
 				</div>
 			</div>
 		</section>
-		
+
 		<section class="photo-mosaic no-padding background-orange">
 			<div class="row h-left photo-row short expand collapse">
 				<div class="col padding-20 md-6">
@@ -205,7 +257,7 @@
 				</div>
 			</div>
 		</section>
-		
+
 		<section class="photo-mosaic no-padding background-blue">
 			<div class="row h-left photo-row short expand collapse">
 				<div class="col md-6">
@@ -232,7 +284,7 @@
 				</div>
 			</div>
 		</section>
-		
+
 		<section class="photo-mosaic no-padding background-green">
 			<div class="row h-left photo-row short expand collapse">
 				<div class="col md-3">
@@ -310,4 +362,4 @@
 	}
 </style>
 </body>
-</html>		
+</html>
