--- a/HTML/session-new.html
+++ b/HTML/session-new.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Session New Test</title>
-	<link rel="stylesheet" href="../CSS/main.min.css">
+	<link rel="stylesheet" href="../CSS/min/main.css">
 	<style type="text/css">
 		.hide{ display: none;}
 	</style>
@@ -28,7 +28,7 @@
 			<div class="col release background-pattern pattern-vertical-bars pattern-small height-small"></div>
 		</div>
 
-		<section id="hero-banner" class="background-blue no-padding-bottom section-sparse-triangles">
+		<section id="hero-banner" class="background-blue section-sparse-triangles">
 			<div class="row">
 				<div class="col lg-9 xl-8">
 					<div class="bullet-group large">
@@ -37,17 +37,74 @@
 						</h2>
 						<p class="h4">MicroStrategy World 2019 is an immersive learning experience designed to educate and inspire every attendee. With sessions tailored to every role, industry, and skill level, World offers personalized content that matches the interests and needs of everyone—from executives, to IT developers, to analysts. Use the filters below to explore the agenda and find the right sessions for you!</p>
 						<p class="h4 text-normal">New speakers and sessions are confirmed daily. Check back often for&nbsp;updates.</p>
-						<a href="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/files/320fb46c07b4499db9d67df8c86b2476.pdf" class="cta-button orange carat">Download full session guide</a>
+						<a href="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/files/a2c4cd12454d42359392ce42545aaee2.pdf" class="cta-button orange carat">Download full session guide</a>
 					</div>
 				</div>
 			</div>
+		</section>
+
+		<section id="meetings" class="background-green section-stacked-bars">
+			<div class="row h-left z-2">
+				<div class="col md-10 lg-9 xl-8">
+					<div class="bullet-group large">
+						<h2 class="h3 text-uppercase text-bold">Meetings</h2>
+						<p class="h4">Thousands of analytics experts from around the world. 3 days. 1 focus– helping you put your data to
+							work like never before. Get ready for the year's most anticipated analytics and mobility&nbsp;event.</p>
+						<a class="cta-button navy small carat" href="https://microstrategy.jifflenow.com/microstrategyworld2019/external_request/c8b915"
+							target="_blank">Schedule Your Meeting Now</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="row between margin-top-30 z-2">
+				<div class="col md-9">
+					<div class="bullet-group">
+						<h5 class="text-uppercase text-bold">1:1 MicroStrategy 2019 Consultation</h5>
+						<p>Excited about MicroStrategy 2019, but weary of the process to upgrade? Meet our upgrade experts to maximize
+							your MicroStrategy 2019 experience. Learn more about how your organization can take advantage of the powerful
+							new functionalities available since the last platform release, including HyperIntelligence, the enterprise
+							semantic graph, dossiers, library and much more.</p>
+						<p>In addition to getting tips on how to prepare for a seamless upgrade process, the MicroStrategy expert will
+							also talk about new features like testing automation in the platform that help you upgrade. We’ll also discuss
+							how you can schedule a complimentary one-week Upgrade Advisory--where we send an expert to your location to help
+							conduct sandbox upgrading testing, build and deploy a HyperIntelligence pilot, and provide a detailed feature
+							value map and clear recommendations for a smooth upgrade.</p>
+					</div>
+				</div>
+				<div class="col md-6">
+					<div class="bullet-group">
+						<h5 class="text-uppercase text-bold">Solution Talks at World 2019</h5>
+						<p>New to World this year, Solution Talks provide conference attendees with a great opportunity to meet
+							one-on-one with one of our executives to learn how numerous departments in MicroStrategy use our platform. Have
+							an interactive discussion, collaborate over strategies to apply a data-driven approach to your department, and
+							get detailed answers to any questions you may have.</p>
+						<a href="https://www.microstrategy.com/us/go/world/solution-talks-at-world-2019" class="cta-button navy carat">Learn More</a>
+					</div>
+				</div>
+				<div class="col md-6">
+					<div class="bullet-group">
+						<h5 class="text-uppercase text-bold">Tech Talks at World 2019</h5>
+						<p>TechTalks provide conference attendees with an opportunity to meet with one of our technical experts to deep
+							dive on a variety of topics related to leveraging the MicroStrategy platform. Join our experts for an in-depth
+							conversation about the semantic graph, HyperIntelligence, migrating to the cloud, and much more.</p>
+						<a href="https://www.microstrategy.com/us/go/world/tech-talks-at-world-2019" class="cta-button navy carat">Learn More</a>
+					</div>
+
+				</div>
+			</div>
+			<div class="pattern-overlay z-1">
+				<img alt="" class="static-pattern pos-top-right" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/8370cb2dd5a64a5ab926912df07df23b.png" />
+			</div>
+		</section>
+
+		<section class="background-blue padding-top-30 no-padding-bottom">
 
 			<div class="tabs-menu row">
 				<a href="#sessions" class="tab-toggle col shrink current">All Sessions</a>
 				<a href="#agenda-grid" class="tab-toggle col shrink">Agenda at a glance</a>
 			</div>
 
-		</section> <!-- End Agenda Hero -->
+		</section>
 
 		<div class="background-navy">
 			<div id="sessions" class="tab-content">
@@ -103,7 +160,7 @@
 								<ul></ul>
 							</div>
 						</div>
-						
+
 						<div class="col">
 							<button type="button" data-control-name="reset" data-control-type="reset" data-control-action="reset" class="cta-button gray expand">
 								Reset
@@ -116,7 +173,7 @@
 					<div class="row h-left">
 						<div id="view-options" class="col">
 							<button id="filter-btn" class="cta-button">Filter</button>
-							<div id="applied-filters">
+							<!-- <div id="applied-filters">
 								<h3 class='text-small text-normal h6'>Filters Applied:</h3>
 								<ul>
 									<li class="text-label">Filter Item 1</li>
@@ -125,11 +182,11 @@
 									<li class="text-label">Filter Item 4</li>
 									<li class="text-label">Filter Item 5</li>
 								</ul>
-							</div>
+							</div> -->
 						</div>
 					</div>
 
-					<div class="row collapse">
+					<div class="row expand collapse">
 						<div id="agendaCards" class="session-browse col">
 						</div>
 					</div>
