updated agenda bar

--- a/HTML/session-new.html
+++ b/HTML/session-new.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Session New Test</title>
-	<link rel="stylesheet" href="../CSS/min/main.css">
+	<link rel="stylesheet" href="../CSS/min/main.min.css">
 	<style type="text/css">
 		.hide{ display: none;}
 	</style>
@@ -259,7 +259,7 @@
 									<span class="event-title" title="Education">Education</span>
 									<span class="event-title" title="Partner Forum">Partner Forum</span>
 									<span class="event-title" title="Expo Hall &amp; Lounge">Expo Hall &amp; Lounge</span>
-									<span class="event-title" title="Datathon">Datathon</span>
+
 									<span class="event-title" title="Continental General Session">General Session</span>
 									<span class="event-title" title="Sessions &amp; Workshops">Sessions &amp; Workshops</span>
 									<span class="event-title" title="Expo Hall &amp; Lounge">Expo Hall &amp; Lounge</span>
