--- a/HTML/Venue.html
+++ b/HTML/Venue.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Venue</title>
-	<link rel="stylesheet" href="../CSS/min/main.css">
+	<link rel="stylesheet" href="../CSS/min/main.min.css">
 </head>
 <body>
 	<div id='venue-page'>
@@ -19,7 +19,7 @@
 				</div>
 			</div>
 			<div class="pattern-overlay z-0">
-				<img alt="pattern background of stacked bars" class="static-pattern pos-top" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/32013585cba040f990a80882f956d983.png" width="847" heigh="515"/>
+				<img alt="pattern background of stacked bars" class="static-pattern pos-top pos-right-neg-100" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/32013585cba040f990a80882f956d983.png" width="847" heigh="515"/>
 			</div>
 		</section>
 
@@ -57,15 +57,18 @@
 				</div>
 			</div>
 			<div class="row photo-row large expand collapse">
-				<div class="col md-6 expand collapse">
+				<div class="col md-4 expand collapse">
 					<div class="photo venue-hampton"></div>
 				</div>
-				<div class="col md-6 expand collapse">
-					<div class="photo venue-sheraton"></div>
+				<div class="col md-4 expand collapse">
+					<div class="photo venue-residence"></div>
+				</div>
+				<div class="col md-4 expand collapse">
+					<div class="photo venue-hilton"></div>
 				</div>
 			</div>
-			<div class="row h-left">
-				<div class="col md-6">
+			<div class="row h-left padding-30">
+				<div class="col md-4">
 					<div class="bullet-group">
 						<h3 class="text-uppercase text-normal marginup5">Hampton Inn & Suites Phoenix Downtown</h3>
 						<p>77 East Polk Street <br> Phoenix, Arizona, 85004</p>
@@ -85,7 +88,60 @@
 					</div>
 				</div>
 
-				<div class="col md-6">
+				<div class="col md-4">
+					<div class="bullet-group">
+						<h3 class="text-uppercase text-normal marginup5">Residence Inn Phoenix Downtown</h3>
+						<p>132 South Central Avenue <br> Phoenix, Arizona, 85004</p>
+						<p>Phone: <a href="tel:602-603-2000" class="text-white">602-603-2000</a></p>
+						<p>Website: <a href="https://www.marriott.com/hotels/travel/phxtw-residence-inn-phoenix-downtown/" class="text-white" target="_blank">Residence Inn Phoenix Downtown</a></p>
+						<p><strong>Room rate $229 per night available from Feb 3rd</strong></p>
+						<p>Be one of the first to stay in downtown Phoenix's only extended-stay hotel, Residence Inn Phoenix Downtown. The stylish, new space boasts impressive suites and a convenient location near popular attractions such as Chase Field and Comerica Theatre.</p>
+						<div class="line tiny blue thick"></div>
+						<h3 class="text-uppercase text-normal text-small">Hotel details & Amenities</h3>
+						<ul class="triangle-list orange">
+							<li>All public areas non-smoking</li>
+							<li>Laundry on-site</li>
+							<li>Valet dry-cleaning</li>
+							<li>Complimentary Full American breakfast</li>
+						</ul>
+						<a class="cta-button navy carat large" href="https://www.marriott.com/hotels/travel/phxtw-residence-inn-phoenix-downtown/" target="_blank">Book your room online</a>
+					</div>
+				</div>
+
+				<div class="col md-4">
+					<div class="bullet-group">
+						<h3 class="text-uppercase text-normal marginup5">Hilton Garden Inn Phoenix Downtown</h3>
+						<p>15 East Monroe Street <br> Phoenix, Arizona, 85004</p>
+						<p>Phone: <a href="tel:602-343-0006" class="text-white">602-343-0006</a></p>
+						<p>Website: <a href="http://hiltongardeninn.hilton.com/en/gi/groups/personalized/P/PHXDOGI-MICRO-20190131/index.jhtml" class="text-white" target="_blank">Residence Inn Phoenix Downtown</a></p>
+						<p><strong>Room rate $249</strong></p>
+						<p>Built in 1932, our Phoenix hotel features original Art Deco design and a grand lobby with restored columns and marble touches. Enjoy the easy ambience of Monroe's lobby bar, breakfast in our Garden Grille restaurant, or a savory dinner at Nook Kitchen.</p>
+						<div class="line tiny blue thick"></div>
+						<h3 class="text-uppercase text-normal text-small">Hotel details & Amenities</h3>
+						<ul class="triangle-list orange">
+							<li>Meeting Rooms</li>
+							<li>Business Center</li>
+							<li>24 hr Pavilion Pantry Market</li>
+							<li>Laundry/Valet Service</li>
+						</ul>
+						<a class="cta-button navy carat large" href="http://hiltongardeninn.hilton.com/en/gi/groups/personalized/P/PHXDOGI-MICRO-20190131/index.jhtml" target="_blank">Book your room online</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="row photo-row large expand collapse">
+				<div class="col md-4 expand collapse">
+					<div class="photo venue-sheraton"></div>
+				</div>
+				<div class="col md-4 expand collapse">
+					<div class="photo venue-hyatt"></div>
+				</div>
+				<div class="col md-4 expand collapse">
+					<div class="photo venue-renaissance"></div>
+				</div>
+			</div>
+			<div class="row h-left">
+				<div class="col md-4">
 					<div class="bullet-group">
 						<h3 class="text-uppercase text-normal marginup5">Sheraton Grand Phoenix</h3>
 						<p>340 North 3rd Street <br> Phoenix, Arizona, 85004</p>
@@ -106,18 +162,7 @@
 						<a class="cta-button navy carat large" href="https://www.marriott.com/event-reservations/reservation-link.mi?id=1544552427242&amp;key=GRP&amp;app=resvlink" target="_blank">Book your room online</a>
 					</div>
 				</div>
-			</div>
-
-			<div class="row photo-row large expand collapse">
-				<div class="col md-6 expand collapse">
-					<div class="photo venue-hyatt"></div>
-				</div>
-				<div class="col md-6 expand collapse">
-					<div class="photo venue-renaissance"></div>
-				</div>
-			</div>
-			<div class="row h-left">
-				<div class="col md-6">
+				<div class="col md-4">
 					<div class="bullet-group">
 						<h3 class="text-uppercase text-normal marginup5">Hyatt Regency Phoenix</h3>
 						<p>122 North Second Street <br> Phoenix, Arizona, 85004</p>
@@ -138,7 +183,7 @@
 					</div>
 				</div>
 
-				<div class="col md-6">
+				<div class="col md-4">
 					<div class="bullet-group">
 						<h3 class="text-uppercase text-normal marginup5">Renaissance Phoenix Downtown Hotel</h3>
 						<p>100 North 1st Street <br> Phoenix, Arizona, 85004</p>
